--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
         <div class="social-links">
             <a href="https://x.com/usd1_terminal" target="_blank">Twitter</a>
-            <a href="https://t.me/usd1terminal" target="_blank">Telegram</a>
+            <a href="https://x.com/USD1_Terminal" target="_blank">Buy Now on Pumpfun</a>
         </div>
     </div>
 
@@ -406,4 +406,5 @@
         userInput.focus();
     </script>
 </body>
+
 </html>
