--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
         <div class="social-links">
             <a href="https://x.com/usd1_terminal" target="_blank">Twitter</a>
-            <a href="https://x.com/USD1_Terminal" target="_blank">Buy Now on Pumpfun</a>
+            <a href="https://x.com/USD1_Terminal" target="_blank">Buy Now on Bonkfun</a>
         </div>
     </div>
 
@@ -408,3 +408,4 @@
 </body>
 
 </html>
+
